<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.bahmni.module</groupId>
        <artifactId>bahmniendtb</artifactId>
        <version>2.3.4-SNAPSHOT</version>
    </parent>

    <packaging>jar</packaging>
    <artifactId>bahmniendtb-omod</artifactId>
    <version>2.3.4-SNAPSHOT</version>

    <dependencies>

        <dependency>
            <groupId>${project.parent.groupId}</groupId>
            <artifactId>${project.parent.artifactId}-api</artifactId>
            <version>${project.parent.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>org.openmrs.web</groupId>
            <artifactId>openmrs-web</artifactId>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <type>test-jar</type>
        </dependency>

        <dependency>
            <groupId>org.openmrs.web</groupId>
            <artifactId>openmrs-web</artifactId>
            <type>test-jar</type>
        </dependency>

        <dependency>
            <groupId>org.openmrs.test</groupId>
            <artifactId>openmrs-test</artifactId>
            <type>pom</type>
        </dependency>

        <!-- OpenMRS Modules -->

        <dependency>
            <groupId>org.bahmni.module</groupId>
            <artifactId>bahmnicore-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.bahmni.module</groupId>
            <artifactId>bahmnicore-omod</artifactId>
        </dependency>

        <dependency>
            <groupId>org.bahmni.module</groupId>
            <artifactId>bahmni-emr-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>episodes-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>dataintegrity-omod</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>dataintegrity-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api-1.12</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>webservices.rest-omod</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>webservices.rest-omod-common</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>webservices.rest-omod</artifactId>
            <classifier>tests</classifier>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>webservices.rest-omod-common</artifactId>
            <classifier>tests</classifier>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>episodes-api</artifactId>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>calculation-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api-2.0</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>reporting-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>providermanagement-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>legacyui-omod</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>uiframework-api</artifactId>
            <version>${uiframeworkVersion}</version>
        </dependency>

        <dependency>
            <groupId>org.bahmni.module</groupId>
            <artifactId>bahmni-migrator</artifactId>
            <version>${bahmniVersion}</version>
        </dependency>

        <dependency>
            <groupId>org.bahmni.module</groupId>
            <artifactId>file-uploader</artifactId>
            <version>${bahmniVersion}</version>
        </dependency>

        <dependency>
            <groupId>org.bahmni.module</groupId>
            <artifactId>admin</artifactId>
            <version>${bahmniVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.bahmni.module</groupId>
            <artifactId>reference-data-api</artifactId>
            <version>${bahmniVersion}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.3.1</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.6.3</version>
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>rulesengine-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>idgen-webservices-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>idgen-webservices-omod</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>idgen-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>addresshierarchy-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.ict4h.openmrs</groupId>
            <artifactId>openmrs-atomfeed-api</artifactId>
        </dependency>

    </dependencies>

    <build>
        <finalName>${project.parent.artifactId}-${project.parent.version}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/webapp</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>resources</exclude>
                </excludes>
                <targetPath>web/module</targetPath>
            </resource>
            <resource>
                <directory>src/main/webapp</directory>
                <filtering>false</filtering>
                <includes>
                    <include>resources</include>
                </includes>
                <targetPath>web/module</targetPath>
            </resource>
        </resources>

        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <configuration>
                        <includeEmptyDirs>true</includeEmptyDirs>
                    </configuration>
                </plugin>
                <!--This plugin's configuration is used to store Eclipse m2e settings
                    only. It has no influence on the Maven build itself. -->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.openmrs.maven.plugins</groupId>
                                        <artifactId>maven-openmrs-plugin</artifactId>
                                        <versionRange>[1.0.1,)</versionRange>
                                        <goals>
                                            <goal>initialize-module</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.apache.maven.plugins</groupId>
                                        <artifactId>maven-dependency-plugin</artifactId>
                                        <versionRange>[2.4,)</versionRange>
                                        <goals>
                                            <goal>unpack-dependencies</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.openmrs.maven.plugins</groupId>
                <artifactId>maven-openmrs-plugin</artifactId>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <id>init</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>initialize-module</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>pack</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package-module</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>Expand moduleApplicationContext and messages</id>
                        <goals>
                            <goal>unpack-dependencies</goal>
                        </goals>
                        <phase>generate-resources</phase>
                        <configuration>
                            <includeGroupIds>${project.parent.groupId}</includeGroupIds>
                            <includeArtifactIds>${project.parent.artifactId}-api</includeArtifactIds>
                            <excludeTransitive>true</excludeTransitive>
                            <includes>**/*</includes>
                            <outputDirectory>${project.build.directory}/classes</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>IT</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.19.1</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                                <configuration>
                                    <argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
                                    <includes>
                                        <include>**/*IT.java</include>
                                    </includes>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>

</project>
